--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension WWW-YahooJapan-Baseball
 
 {{$NEXT}}
 
+    - Fix the problem that interleague results contains all-star games, etc.
+
 0.01 2015-10-18T05:30:51Z
 
     - original version
