--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension WWW-YahooJapan-Baseball
 
 {{$NEXT}}
 
+    - Split game response to game stats and season stats.
+
 0.02 2015-10-24T10:16:37Z
 
     - Fix the problem that interleague results contains all-star games, etc.
